added all crimson stem, warped stem and, mangrove wooden tool variants =]

--- a/src/main/resources/assets/woodentoolvariants/lang/en_us.json
+++ b/src/main/resources/assets/woodentoolvariants/lang/en_us.json
@@ -4,7 +4,21 @@
   "item.woodentoolvariants.birch_axe": "Birch Axe",
   "item.woodentoolvariants.birch_shovel": "Birch Shovel",
   "item.woodentoolvariants.birch_hoe": "Birch Hoe",
-
+  "item.woodentoolvariants.warped_axe": "Warped Axe",
+  "item.woodentoolvariants.warped_pickaxe": "Warped Pickaxe",
+  "item.woodentoolvariants.warped_sword": "Warped Sword",
+  "item.woodentoolvariants.warped_shovel": "Warped Shovel",
+  "item.woodentoolvariants.warped_hoe": "Warped Hoe",
+  "item.woodentoolvariants.crimson_axe": "Crimson Axe",
+  "item.woodentoolvariants.crimson_pickaxe": "Crimson Pickaxe",
+  "item.woodentoolvariants.crimson_sword": "Crimson Sword",
+  "item.woodentoolvariants.crimson_shovel": "Crimson Shovel",
+  "item.woodentoolvariants.crimson_hoe": "Crimson Hoe",
+  "item.woodentoolvariants.mangrove_axe": "Mangrove Axe",
+  "item.woodentoolvariants.mangrove_pickaxe": "Mangrove Pickaxe",
+  "item.woodentoolvariants.mangrove_sword": "Mangrove Sword",
+  "item.woodentoolvariants.mangrove_shovel": "Mangrove Shovel",
+  "item.woodentoolvariants.mangrove_hoe": "Mangrove Hoe",
 
 
   "creativetab.wooden_tool_variants_tab": "Wooden Tool Variants"
